--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -231,6 +231,9 @@ notify.workspace = true
 env_logger = "0.11.8"
 
 
+aws-lc-rs = { version = "1.13.1", default-features = false  }
+aws-lc-sys = { version = "0.29", default-features = false }
+
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger.workspace = true
 openssl = { version = "*", features = ["vendored"] }
